2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/Metadata.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/SongDatabase.cs:
	* src/StringUtils.cs:

	Hopefully marked all strings for translation.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* Makefile.am:
	* README:
	* TODO:
	* configure.in:
	* data/glade/AddWindow.glade:
	* data/glade/ErrorDialog.glade:
	* data/glade/ProgressWindow.glade:
	* data/glade/YesNoDialog.glade:
	* po/POTFILES.in:
	* po/cs.po:
	* po/de.po:
	* po/es.po:
	* po/fr.po:
	* po/hr.po:
	* po/nl.po:
	* po/sr.po:
	* po/sr@Latn.po:
	* po/sv.po:
	* src/About.cs:
	* src/Makefile.am:
	* src/Muine.cs:

	First stab at proper translation support. This needs gettext 0.14
	or higher. Will finish tomorrow.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_select_first),
	(pointer_list_view_select_next), (pointer_list_view_select_prev),
	(pointer_list_view_select):

	Move treeview cursor.

2004-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/pointer-list-view.c: (pointer_list_view_select_next),
	(pointer_list_view_select_prev):
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/KeyUtils.cs:
	* src/PlaylistWindow.cs:

	Forward navigation keypresses in add windows to the treeview.

2004-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/pointer-list-model.c:
	(pointer_list_model_drag_data_received), (remove_ptr):

	Make drag to end of playlist work. This might need Gtk 2.3,
	I'm not sure ..

2004-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* TODO:
	* configure.in:
	* libmuine/db.c:
	* libmuine/db.h:
	* libmuine/id3-vfs/id3-vfs.c: (id3_vfs_bitrate):
	* libmuine/id3-vfs/id3-vfs.h:
	* libmuine/id3-vfs/mp3bitrate.c: (mpg123_parse_xing_header),
	(mp3_bitrate_parse_header):
	* libmuine/id3-vfs/mp3bitrate.h: